Fix team pofiles on firefox

--- a/src/styles/components/_profile.scss
+++ b/src/styles/components/_profile.scss
@@ -16,10 +16,14 @@
 
   &__image {
     width: 100%;
-    height: 100%;
-    padding-bottom: 114%;
     background-position: center center;
     background-size: cover;
+
+    &::after {
+      display: block;
+      padding-bottom: 114%;
+      content: '';
+    }
   }
 
   &__location,
